kubernetes/emby/network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns
  namespace: emby
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: emby-egress
  namespace: emby
spec:
  endpointSelector:
    matchLabels:
      app: emby
  egress:
    - toEntities:
        - world

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: emby-ingress
  namespace: emby
spec:
  endpointSelector:
    matchLabels:
      app: emby
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
      toPorts:
        - ports:
            - port: "8096"
